<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dress Yourself</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Accueil</string>
    <string name="model_string">Model :</string>
    <string name="brand_string">Brand :</string>
    <string name="weather_string">Weather :</string>
    <string name="color_string">Color :</string>
    <string name="type_string">Type :</string>
    <string name="modelHint">Ex : two-tone striped sweater</string>
    <string name="validation_string">Generate</string>
    <string name="outfit_top">Top</string>
    <string name="outfit_bottom">Bottom</string>
    <string name="outfit_feet">Feet</string>
    <string name="outfit_generate">Generate outfit</string>
    <string name="generate">Generate Outfit</string>
    <string name="photo">the associated picture</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="PhotoVetement">Clothes photo</string>
    <string name="Desc">Description</string>
    <string name="enter_description">Enter your description</string>
    <string name="save">save modifications</string>
    <string name="addClothesButton">Add a new clothes from Zara</string>
	<string name="listClothesButton">List all clothes</string>
	
    <string-array name="weather_array">
        <item>Sunny</item>
        <item>Rainy</item>
        <item>Cloudy</item>
        <item>Snowy</item>
    </string-array>
    <string-array name="color_array">
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
        <item>Pink</item>
        <item>Purple</item>
    </string-array>
    <string-array name="type_array">
        <item>Top</item>
        <item>Bottom</item>
    </string-array>

    <string name="title_add_clothing">Add clothing</string>
    <string name="add_clothing">Add new clothes</string>
    <string name="title_clothe_list">Clothes</string>
    <string name="title_clothe_detail">Clothe Detail</string>
    <string name="title_modify_clothe">Modify</string>
    <string name="Body">Body :</string>
    <string name="modify">modify</string>
    <string name="description">Description :</string>
    <string name="label_generate_main">Get dressed!</string>
    <string name="label_list_clothes">See my closes</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_activity_debug">/!\\ Debug Zone /!\\</string>
    <string name="title_activity_outfit_mail">Mail an outfit</string>
    <string name="receiver">Intput receiver:</string>
    <string name="send">Send mail</string>
    <string name="write_mail_body">Write your text :</string>
    <string name="sendOutfitByMail">Send outfit by mail</string>
    <string name="GetDressed">Get all \'dresses\' from the API</string>
    <string name="title_activity_clothe_mail">Mail an clothe</string>
    <string name="sendClothMail">Send Cloth by mail</string>
    <string name="title_activity_search_engine">ActivitySearchEngine</string>
    
    <string name="action_search">Search</string>
    <string name="search_hint">Search products</string>
    <string name="no_description">No description for this product.</string>
    <string name="picture_of_product">Picture of product.</string>
    <string name="empty_list">No product found.</string>

</resources>
