<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityClotheModify" >
	
    <ImageButton
        android:id="@+id/imageButton"
        android:padding="0dp"
        android:layout_margin="10dip"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/photo"
				android:scaleType="fitXY"
        android:src="@drawable/jeans_slim" />
    
    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_below="@+id/imageButton"
        android:layout_marginTop="30dp"
        android:text="@string/model_string" />
    
    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_below="@+id/model"
        android:layout_marginTop="30dp"
        android:text="@string/brand_string" />
    
    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_below="@+id/brand"
        android:layout_marginTop="30dp"
        android:text="@string/color_string" />
    
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_below="@+id/color"
        android:layout_marginTop="30dp"
        android:text="@string/type_string" />

    <EditText 
        android:id="@+id/modelEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/model"
        android:layout_below="@+id/imageButton" 
        android:layout_alignBottom="@+id/model"
        android:hint="" />
        
     <EditText 
        android:id="@+id/brandEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/modelEdit"
        android:layout_alignBottom="@+id/brand"
        android:hint="" />
    
    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/modelEdit"
        android:layout_alignBottom="@+id/color" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/modelEdit"
        android:layout_alignBottom="@+id/type" />

    <Button
        android:id="@+id/save"
        android:text="@string/save"
		android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="@style/btnStyle"
        android:background="@drawable/button_dressyourself_style"/>

</RelativeLayout>