<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clothe_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClotheDetailActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/photo"
        android:src="@drawable/bottines" />

    <TextView
        android:id="@+id/NameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/photo"
        android:text="@string/label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/type_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/weatherLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TypeLabel"
        android:text="@string/weather_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/weatherLabel"
        android:text="@string/color_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/BodyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ColorLabel"
        android:text="@string/Body"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/LabelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/NameLabel"
        android:layout_alignBottom="@+id/NameLabel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/weatherLabel"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TypeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weatherLabel"
        android:layout_alignLeft="@+id/LabelTxt"
        android:layout_alignParentRight="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/colorTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TypeTxt"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/weatherTxt"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/bodyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/BodyLabel"
        android:layout_alignBottom="@+id/BodyLabel"
        android:layout_alignRight="@+id/colorTxt"
        android:layout_toRightOf="@+id/weatherLabel"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/weatherTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ColorLabel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/weatherLabel"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/modifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="29dp"
        android:layout_marginRight="24dp"
        android:text="@string/modify" />

</RelativeLayout>

