<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityOutfitMail" >

    <TextView
        android:id="@+id/txtDstClothe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:text="@string/receiver"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editDestinataireClothe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtDstClothe"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtDstClothe"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtSaisieClothe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editDestinataireClothe"
        android:layout_marginTop="22dp"
        android:text="@string/write_mail_body"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editMailClothe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnEnvoieMailClothe"
        android:layout_alignLeft="@+id/txtSaisieClothe"
        android:layout_alignRight="@+id/editDestinataireClothe"
        android:layout_below="@+id/txtSaisieClothe"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnEnvoieMailClothe"
        android:text="@string/send"
        android:layout_alignRight="@+id/editDestinataireClothe"       
		android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="@style/btnStyle"
        android:background="@drawable/button_dressyourself_style" />

</RelativeLayout>
